# ntf-core

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  configure  configure.cmd  project.cmake  repository.cmake  targets.cmake  toolchain.cmake  tsan.supp  variables.cmake
groups/ntc/: CMakeLists.txt  ntc.cpp  ntc.h  ntc.t.cpp
groups/ntc/doc/: ntc.dox  ntc.txt
groups/ntc/group/: .gitignore  ntc.cap  ntc.dep  ntc.mem  ntc.pc.desc
groups/ntc/ntca/: ntca_acceptcontext.cpp  ntca_acceptcontext.h  ntca_acceptevent.cpp  ntca_acceptevent.h  ntca_accepteventtype.cpp  ntca_accepteventtype.h  ntca_acceptoptions.cpp  ntca_acceptoptions.h  ntca_acceptqueuecontext.cpp  ntca_acceptqueuecontext.h  ntca_acceptqueueevent.cpp  ntca_acceptqueueevent.h  ntca_acceptqueueeventtype.cpp  ntca_acceptqueueeventtype.h  ntca_accepttoken.cpp  ntca_accepttoken.h  ntca_bindcontext.cpp  ntca_bindcontext.h  ntca_bindevent.cpp  ntca_bindevent.h  ntca_bindeventtype.cpp  ntca_bindeventtype.h  ntca_bindoptions.cpp  ntca_bindoptions.h  ntca_bindtoken.cpp  ntca_bindtoken.h  ntca_checksum.cpp  ntca_checksum.h  ntca_checksum.t.cpp  ntca_checksumtype.cpp  ntca_checksumtype.h  ntca_compressionconfig.cpp  ntca_compressionconfig.h  ntca_compressiongoal.cpp  ntca_compressiongoal.h  ntca_compressiontype.cpp  ntca_compressiontype.h  ntca_connectcontext.cpp  ntca_connectcontext.h  ntca_connectevent.cpp  (+251 more)
groups/ntc/ntccfg/: .gitignore  ntccfg_bind.cpp  ntccfg_bind.h  ntccfg_bind.t.cpp  ntccfg_bit.cpp  ntccfg_bit.h  ntccfg_bit.t.cpp  ntccfg_foreach.cpp  ntccfg_foreach.h  ntccfg_foreach.t.cpp  ntccfg_format.cpp  ntccfg_format.h  ntccfg_format.t.cpp  ntccfg_function.cpp  ntccfg_function.h  ntccfg_function.t.cpp  ntccfg_inline.cpp  ntccfg_inline.h  ntccfg_inline.t.cpp  ntccfg_likely.cpp  ntccfg_likely.h  ntccfg_likely.t.cpp  ntccfg_limits.cpp  ntccfg_limits.h  ntccfg_limits.t.cpp  ntccfg_lock.cpp  ntccfg_lock.h  ntccfg_lock.t.cpp  ntccfg_mutex.cpp  ntccfg_mutex.h  ntccfg_mutex.t.cpp  ntccfg_object.cpp  ntccfg_object.h  ntccfg_object.t.cpp  ntccfg_platform.cpp  ntccfg_platform.h  ntccfg_platform.t.cpp  ntccfg_test.cpp  ntccfg_test.h  ntccfg_test.t.cpp  (+6 more)
groups/ntc/ntcd/: ntcd_blobbufferfactory.cpp  ntcd_blobbufferfactory.h  ntcd_blobbufferfactory.t.cpp  ntcd_compression.cpp  ntcd_compression.h  ntcd_compression.t.cpp  ntcd_datagramsocket.cpp  ntcd_datagramsocket.h  ntcd_datagramsocket.t.cpp  ntcd_datapool.cpp  ntcd_datapool.h  ntcd_datapool.t.cpp  ntcd_datautil.cpp  ntcd_datautil.h  ntcd_datautil.t.cpp  ntcd_encryption.cpp  ntcd_encryption.h  ntcd_encryption.t.cpp  ntcd_listenersocket.cpp  ntcd_listenersocket.h  ntcd_listenersocket.t.cpp  ntcd_machine.cpp  ntcd_machine.h  ntcd_machine.t.cpp  ntcd_proactor.cpp  ntcd_proactor.h  ntcd_proactor.t.cpp  ntcd_reactor.cpp  ntcd_reactor.h  ntcd_reactor.t.cpp  ntcd_resolver.cpp  ntcd_resolver.h  ntcd_resolver.t.cpp  ntcd_simulation.cpp  ntcd_simulation.h  ntcd_simulation.t.cpp  ntcd_streamsocket.cpp  ntcd_streamsocket.h  ntcd_streamsocket.t.cpp  ntcd_test.cpp  (+5 more)
groups/ntc/ntcdns/: ntcdns_cache.cpp  ntcdns_cache.h  ntcdns_cache.t.cpp  ntcdns_client.cpp  ntcdns_client.h  ntcdns_client.t.cpp  ntcdns_compat.cpp  ntcdns_compat.h  ntcdns_compat.t.cpp  ntcdns_database.cpp  ntcdns_database.h  ntcdns_database.t.cpp  ntcdns_protocol.cpp  ntcdns_protocol.h  ntcdns_protocol.t.cpp  ntcdns_resolver.cpp  ntcdns_resolver.h  ntcdns_resolver.t.cpp  ntcdns_server.cpp  ntcdns_server.h  ntcdns_server.t.cpp  ntcdns_system.cpp  ntcdns_system.h  ntcdns_system.t.cpp  ntcdns_utility.cpp  ntcdns_utility.h  ntcdns_utility.t.cpp  ntcdns_vocabulary.cpp  ntcdns_vocabulary.h  ntcdns_vocabulary.t.cpp  ntcdns_vocabulary.xsd
groups/ntc/ntcf/: ntcf_api.cpp  ntcf_api.h  ntcf_concurrent.cpp  ntcf_concurrent.h  ntcf_concurrent.t.cpp  ntcf_system.cpp  ntcf_system.h  ntcf_system.t.cpp  ntcf_test.cpp  ntcf_test.h  ntcf_test.t.cpp  ntcf_testclient.cpp  ntcf_testclient.h  ntcf_testclient.t.cpp  ntcf_testfixture.cpp  ntcf_testfixture.h  ntcf_testfixture.t.cpp  ntcf_testframework.cpp  ntcf_testframework.h  ntcf_testframework.t.cpp  ntcf_testmessage.cpp  ntcf_testmessage.h  ntcf_testmessage.t.cpp  ntcf_testserver.cpp  ntcf_testserver.h  ntcf_testserver.t.cpp  ntcf_testvocabulary.cpp  ntcf_testvocabulary.h  ntcf_testvocabulary.idl  ntcf_testvocabulary.sh
groups/ntc/ntci/: ntci_acceptcallback.cpp  ntci_acceptcallback.h  ntci_acceptcallback.t.cpp  ntci_acceptcallbackfactory.cpp  ntci_acceptcallbackfactory.h  ntci_acceptcallbackfactory.t.cpp  ntci_acceptfuture.cpp  ntci_acceptfuture.h  ntci_acceptfuture.t.cpp  ntci_acceptor.cpp  ntci_acceptor.h  ntci_acceptor.t.cpp  ntci_acceptresult.cpp  ntci_acceptresult.h  ntci_acceptresult.t.cpp  ntci_authorization.cpp  ntci_authorization.h  ntci_bindable.cpp  ntci_bindable.h  ntci_bindcallback.cpp  ntci_bindcallback.h  ntci_bindcallbackfactory.cpp  ntci_bindcallbackfactory.h  ntci_bindfuture.cpp  ntci_bindfuture.h  ntci_bindresult.cpp  ntci_bindresult.h  ntci_callback.cpp  ntci_callback.h  ntci_callback.t.cpp  ntci_cancellation.cpp  ntci_cancellation.h  ntci_chronology.cpp  ntci_chronology.h  ntci_clock.cpp  ntci_clock.h  ntci_closable.cpp  ntci_closable.h  ntci_closecallback.cpp  ntci_closecallback.h  (+219 more)
groups/ntc/ntcm/: ntcm_collector.cpp  ntcm_collector.h  ntcm_collector.t.cpp  ntcm_logpublisher.cpp  ntcm_logpublisher.h  ntcm_monitorable.cpp  ntcm_monitorable.h  ntcm_monitorable.t.cpp  ntcm_monitorableregistry.cpp  ntcm_monitorableregistry.h  ntcm_monitorableregistry.t.cpp  ntcm_monitorableutil.cpp  ntcm_monitorableutil.h  ntcm_monitorableutil.t.cpp  ntcm_periodiccollector.cpp  ntcm_periodiccollector.h  ntcm_periodiccollector.t.cpp
groups/ntc/ntco/: ntco_devpoll.cpp  ntco_devpoll.h  ntco_devpoll.t.cpp  ntco_epoll.cpp  ntco_epoll.h  ntco_epoll.t.cpp  ntco_eventport.cpp  ntco_eventport.h  ntco_eventport.t.cpp  ntco_iocp.cpp  ntco_iocp.h  ntco_iocp.t.cpp  ntco_ioring.cpp  ntco_ioring.h  ntco_ioring.t.cpp  ntco_kqueue.cpp  ntco_kqueue.h  ntco_kqueue.t.cpp  ntco_poll.cpp  ntco_poll.h  ntco_poll.t.cpp  ntco_pollset.h  (+8 more)
groups/nts/: CMakeLists.txt  nts.cpp  nts.h  nts.t.cpp
(+711 files in other folders)
